# pythagoras

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.lua  autogen.sh  configure.ac  configure.h  datatype.h  main.c  pythagoras.c
src/: Makefile.am  astyle.cfg  main.c  pythagoras.h  real.h  util.h
